--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,34 +3,31 @@
 <header>
 
   <nav class="navbar navbar-expand-lg navbar-dark black scrolling-navbar">
-      <a class="navbar-brand" href="#"><strong>Navbar</strong></a>
+    <a class="navbar-brand" href="#"><strong>Meshzki</strong></a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#">Me <span class="sr-only">(current)</span></a>
               </li>
+              
               <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#">Professional</a>
               </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Opinions</a>
-              </li>
+             
           </ul>
           <ul class="navbar-nav nav-flex-icons">
               <li class="nav-item">
-                  <a class="nav-link"><i class="fa fa-facebook"></i></a>
+                  <a class="nav-link"><i class="fa fa-linkedin"></i></a>
               </li>
               <li class="nav-item">
                   <a class="nav-link"><i class="fa fa-twitter"></i></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link"><i class="fa fa-instagram"></i></a>
+                  <a class="nav-link"><i class="fa fa-github"></i></a>
               </li>
           </ul>
       </div>
@@ -43,17 +40,35 @@
 <section>
 
   <!--Section heading-->
-  <h1 class="py-5 font-weight-bold text-center">Why is it so great?</h1>
+  <h2 class="py-5 font-weight-bold text-center">Why is it so great?</h2>
   <!--Section description-->
-  <p class="px-5 mb-5 pb-3 lead grey-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-  aliqua. Ut enim ad minim veniam.</p>
+  <p class="px-5 mb-5 pb-3 lead text-center">Instead of trying to make your life perfect, give yourself the freedom to make it an adventure, and go ever upward.
+    </p>
+    <div class="row">
+            <div class="col">
+                    <img src="\assets\images\me.jpg.jpg" class="img-fluid" alt="Responsive image">
+
+            </div>
+            <div class="col">
+                <!--Section heading-->
+                <center font-weight-bold> <h1>Ramesh Sharma</h1>
+                <!--Section description-->
+
+                <h5>I'm pretty much everything such as Engineer | Business Development Manager | Analyst | Developer</h5></center><br/><br/>
+
+            </div>
+        </div>
+       
+           
+ 
+  
 
   <!--Grid row-->
   <div class="row pt-2">
 
   <!--Grid column-->
   <div class="col-lg-5 text-center text-lg-left">
-      <img src="https://mdbootstrap.com/img/Photos/Others/screens-section.jpg" alt="" class="img-fluid z-depth-0">
+      <img src="https://mdbootstrap.com/img/Photos/Others/images/6.jpg" alt="" class="img-fluid z-depth-0">
   </div>
   <!--Grid column-->
 
@@ -66,9 +81,15 @@
           <i class="fa fa-mail-forward fa-lg indigo-text"></i>
       </div>
       <div class="col-10">
-          <h5 class="font-weight-bold text-left mb-3 dark-grey-text">Safety</h5>
-          <p class="grey-text text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda
-          deleniti hic.</p>
+          <h5 class="font-weight-bold text-left mb-3 dark-grey-text">Developer skills</h5>
+          <p class="text-left">
+                Frontend: JavaScript, Angular, CSS</p>
+            <p> Backend: JEE, Spring MVC, Spring Boot, Hibernate, JSP, Servlet, Maven, Ruby on Rails</p>
+            <p> Web Service: REST, SOAP</p>
+            <p>  Cloud: AWS EC2, S3</p>
+            <p>  Experience in Agile/Scrum methodologies, Test Driven Development</p>
+            <p>  Github: https://github.com/meshzki</p>
+            <p>  Working experience with enterprise application and open source technology </p>
       </div>
       </div>
       <!--Grid row-->
@@ -79,9 +100,10 @@
           <i class="fa fa-mail-forward fa-lg indigo-text"></i>
       </div>
       <div class="col-10">
-          <h5 class="font-weight-bold text-left mb-3 dark-grey-text">Technology</h5>
-          <p class="grey-text text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda
-          deleniti hic.</p>
+          <h5 class="font-weight-bold text-left mb-3 dark-grey-text">Business Skills</h5>
+          <p class="text-left">
+                Business Development: Helping businesses create the most value using the Partnership. Successful and progressive record of hands-on experience in managing, evaluating and defining requirements.</p>
+               <p> Analyst: Strong analytical skills with the ability to collect, organize, analyze, and disseminate significant amounts of information with attention to detail and accuracy.</p>
       </div>
       </div>
       <!--Grid row-->
@@ -92,9 +114,13 @@
           <i class="fa fa-mail-forward fa-lg indigo-text"></i>
       </div>
       <div class="col-10">
-          <h5 class="font-weight-bold text-left mb-3 dark-grey-text">Finance</h5>
-          <p class="grey-text text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda
-          deleniti hic.</p>
+          <h5 class="font-weight-bold text-left mb-3 dark-grey-text">Currently working on</h5>
+          <p class="text-left">
+              Blockchain:</p>
+        <p>   Web 3.0:       </p>
+        <p>   DevOps:       </p>
+        <p>   Entrepreneur:         </p>
+
       </div>
       </div>
       <!--Grid row-->
@@ -115,11 +141,13 @@
  <section class="magazine-section text-center multi-columns">
         
   <!--Section heading-->
-  <h2 class="h1 text-center my-5 font-weight-bold">Section title</h2>
+  <h2 class="h1 text-center my-5 font-weight-bold">Past great achievement</h2>
 
   <!--Section description-->
-  <p class="grey-text pb-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-  occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p class="grey-text pb-5">
+      In last two year, I worked good project and Partnership with big companies which rank on top 5 healthcare solution. In my career field I learn Business Intellegence and analytical skills and improve my Database skill which help alot in Hadoop section.
+      And from last year I'm working JEE, Spring, Spring MVC, Spring Boot.
+  </p>
 
   <!--Grid row-->
   <div class="row text-left">
@@ -143,14 +171,14 @@
           <div class="col-12">
           <a href="" class="orange-text mb-1">
               <span class="badge pink">
-              <i class="fa fa-camera mr-1" aria-hidden="true"></i> Adventure</span>
+              <i class="fa fa-plane mr-1" aria-hidden="true"></i> Adventure</span>
           </a>
           </div>
       </div>
 
       <!--Title-->
       <a>
-          <strong>This is title of the news</strong>
+          <strong>Bike trip more over 900 Km in 2 days</strong>
           <i class="fa fa-angle-right"></i>
       </a>
 
@@ -159,7 +187,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>24 Food Swaps That Slash Calories.
+      <a>Tried some japanese food.
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -167,7 +195,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>How to Make a Beet Cocktail?
+      <a>Learn, How to Make a Chinese food?
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -175,7 +203,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>8 Sneaky Reasons You're Always Hungry.
+      <a>Beat my own walk record 120 Km
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -183,7 +211,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>5 Pressure Cooker Recipes You Need to Try.
+      <a>Sleep in lonavala.
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -200,7 +228,7 @@
 
       <!--Image-->
       <div class="view overlay rounded z-depth-2 mb-3">
-          <img src="https://mdbootstrap.com/img/Photos/Others/images/31.jpg" class="img-fluid" alt="First sample image">
+          <img src="https://mdbootstrap.com/img/Photos/Others/images/3.jpg" class="img-fluid" alt="First sample image">
           <a>
           <div class="mask rgba-white-slight"></div>
           </a>
@@ -211,14 +239,14 @@
           <div class="col-12">
           <a href="" class="orange-text mb-1">
               <span class="badge deep-orange">
-              <i class="fa fa-plane mr-1" aria-hidden="true"></i> Travel</span>
+              <i class="fa fa-camera mr-1" aria-hidden="true"></i> Tech</span>
           </a>
           </div>
       </div>
 
       <!--Title-->
       <a>
-          <strong>This is title of the news</strong>
+          <strong>A very strong experience of typical requirements gethering</strong>
           <i class="fa fa-angle-right"></i>
       </a>
 
@@ -227,7 +255,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>Trends in the blogosphere for 2016.
+      <a>Good knowlege of Big Data and JavaScript
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -235,7 +263,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>Where you eat the best lunch in Warsaw?
+      <a>Backend: Ruby on Rails and Java
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -243,7 +271,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>What camera take for holidays?
+      <a>Social media and marketing expert
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -251,7 +279,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>Why you should visit Lisbon?
+      <a>Amazon Web Service, EC2, S3
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -268,7 +296,7 @@
 
       <!--Image-->
       <div class="view overlay rounded z-depth-2 mb-3">
-          <img src="https://mdbootstrap.com/img/Photos/Others/images/52.jpg" class="img-fluid" alt="First sample image">
+          <img src="https://mdbootstrap.com/img/Photos/Others/images/18.jpg" class="img-fluid" alt="First sample image">
           <a>
           <div class="mask rgba-white-slight"></div>
           </a>
@@ -286,7 +314,7 @@
 
       <!--Title-->
       <a>
-          <strong>This is title of the news</strong>
+          <strong>Love music, movies, tv-series</strong>
           <i class="fa fa-angle-right"></i>
       </a>
 
@@ -295,7 +323,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>Top models in Poland.
+      <a>Music: Led Zeppelin, The Verve, Nirvana, Kings of Leon and soon
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -303,7 +331,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>London Fashion Week - see online.
+      <a>Movie: Fight-club, the hateful eight, Batman
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -311,7 +339,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>Best bags designers in Italy.
+      <a>Suits, Billions, Friends, Two and half man
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -319,7 +347,7 @@
 
       <!--Small news-->
       <div class="single-news">
-      <a>Choose best swimsuit for summer.
+      <a>Other: Shark Tank, Silicon Valley
           <i class="fa fa-angle-right"></i>
       </a>
       </div>
@@ -441,7 +469,7 @@
       <ul class="list-unstyled list-inline">
           <li class="list-inline-item">
               <a class="btn-floating btn-sm btn-fb mx-1">
-                  <i class="fa fa-facebook"> </i>
+                  <i class="fa fa-github"> </i>
               </a>
           </li>
           <li class="list-inline-item">
@@ -459,11 +487,7 @@
                   <i class="fa fa-linkedin"> </i>
               </a>
           </li>
-          <li class="list-inline-item">
-              <a class="btn-floating btn-sm btn-dribbble mx-1">
-                  <i class="fa fa-dribbble"> </i>
-              </a>
-          </li>
+          
       </ul>
   </div>
   <!--/.Social buttons-->
@@ -471,7 +495,7 @@
   <!--Copyright-->
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
-      <a href="https://mdbootstrap.com/material-design-for-bootstrap/"> MDBootstrap.com </a>
+       meshzki
   </div>
   <!--/.Copyright-->
 
